# python_ai_agent

./: .gitignore  main.py  ruff.toml  setup.cfg  tests.py
functions/: get_files_info.py
unittests/: tests.py
