[metadata]
name = python_ai_agent
version = 0.1.0
description = An AI Agent using Gemini API
author = Ryan "ryerye" Richmond 
license = MIT

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    python-dotenv
    google-generativeai
    # Add any other packages we add

[options.packages.find]
exclude =
    unittests

[options.entry_points]
console_scripts =
    ai-agent = main:main

[tool:pytest]
testpaths = unittests
python_files = test_*.py tests.py
addopts = -v

